src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
section {
  width: 65vw;
  min-width: 300px;
  background: #0c0c0c;
  display: flex;
  flex-direction: column;
  height: 90vh;
  max-width: 700px;
}
.chatroom-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  flex-wrap: wrap;
}
.chatroom-header button{
  color: white;
  background:  #1f1f1f;
  border: none;
  font-size: 15px;
  padding: 1em;
  border-radius: 10px;
  cursor: pointer;
  outline: none;
  flex: 1;
  margin: 5px;
}

.chatroom-header button:active {
  background: #2a2a2a;
}
.user-info {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  min-width: 85%;
}
.user-info h2 {
  font-size: 20px;
  margin: 0;
  padding: 0;
  text-align: left;
}
.user-info div {
  padding: 1rem;
}
.user-info h3 {
  font-size: 15px;
  margin: 0;
  padding: 0;
  text-align: left;
}
.chat-messages {
  height: 100%;
  overflow: scroll;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
}
form {
  display: flex;
}
form input {
  flex: 1;
  padding: 1rem;
  background: #101010;
  border: none;
  font-size: 1rem;
  color: white;
  outline: none;
}
form button {
  min-width: 70px;
  font-size: 1rem;
  background: #151515;
  border: none;
  color: white;
  cursor: pointer;
}
form button:active {
  background: #202020;
}
.message {
  display: flex;
  align-items: center;
  font-size: 20px;
  padding: 5px;
  border-radius: 5px;
  background: #404040;
  margin: 2px;
  flex-wrap: wrap;
  max-width: 300px;
}
.message .message-text {
  margin: 0;
  padding: 0;
  text-align: left;
}
.message.received .message-text {
  margin: 0;
  padding: 0;
  text-align: right;
}
.message div {
  flex: 1;
  display: flex;
  justify-content: flex-end;
}
.message img {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  overflow: hidden;
  margin: 10px;
}
.message.sent {
  align-self: flex-end;
}
.message.received {
  align-self: flex-start;
  flex-flow: row-reverse;
}
.signin {
  background: white;
  border: none;
  padding: 1rem;
  font-size: 15px;
  cursor: pointer;
  outline: none;
}
.signin:active {
  background: rgb(231, 231, 231);
}

